# tinynova

./: .gitignore  .ignore  MANIFEST.in  README.md  pyproject.toml
src/tinynova/: __main__.py
