[project]
name = "tinynova"
description = "tinynova"
version = "0.0.1"
readme = "README.md"

authors = [
    { name="Michael Lamertz", email="michael.lamertz@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
]

license = "MIT"
license-files = [
    "LICENSE",
    "LICENSE-kenney-nl.txt"
]

dependencies = [
    'nova @ git+https://github.com/kadir014/nova-physics-python',
    'pgcooldown',
    'pygame-ce',
    'tinyecs',
]

[project.scripts]
tinynova = "tinynova.__main__:main"

[tool.setuptools]
include-package-data = true

[project.urls]
homepage = "https://github.com/dickerdackel/tinynova"
bugtracker = "https://github.com/DickerDackel/tinynova/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
